styles.css
@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Poppins&display=swap);

html {
  box-sizing: border-box;
}

* {
  box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
  background: #e5e5e5;
  font-family: 'Poppins', sans-serif;
  font-size: 15px;
}

a {
  text-decoration: none;
  color: #7f8cff;
}

a:hover {
  color: #1e31dd;
}

.container-padding-x {
  padding-left: 24px;
  padding-right: 24px;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
}

.header {
  background: #fff;
}

.nav {
  padding-top: 20px;
  padding-bottom: 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  font-size: 18px;
  font-weight: 700;
}

.nav .fa-solid {
  color: #6070ff;
  cursor: pointer;
}

.menu {
  opacity: 0;
}

/* This is from about section */

.about-language .fa-solid {
  color: #acb7c3;
  font-size: 12px;
  margin-top: -20px;
  margin-left: 260px;
  position: absolute;
}

.nav .fa-solid:hover {
  color: #1e31dd;
  transform: scale(1.5) rotate(45deg);
}

.headline {
  background: #fff;
}

.headline-container {
  background-image: url(images/header-shapes.png);
  background-repeat: no-repeat;
  background-size: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: baseline;
  height: 100vh;
  border-bottom-left-radius: 60px;
  background-color: white;
}

.title {
  width: 100%;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
}

.text {
  max-width: 600px;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
}

.connect {
  max-width: 600px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 40px;
}

.social {
  max-width: 600px;
  display: flex;
  gap: 20px;
  padding: 0;
  list-style: none;
}

.about-language li {
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  color: black;
  margin-left: 10px;
  margin-top: 10px;
}

.social li:hover {
  transform: rotate(45deg);
}

.project {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 26px;
  margin-bottom: 114px;
  background-color: #e5e5e5;
}

.project .card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: white;
  max-width: 327px;
  border-radius: 16px;
  padding: 16px;
  margin: 88px 0 0 0;
}

.project img {
  width: 100%;
  margin: 0;
}

.card .title {
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
  margin-top: 12px;
  margin-bottom: 20px;
}

.card .info {
  list-style: none;
  display: flex;
  gap: 12px;
  padding: 0 0 12px 0;
  margin: 0;
  color: #7a869a;
}

.card .info li:first-child {
  font-weight: 600;
  color: #344563;
}

.card .info .fa-solid {
  color: #c1c7d0;
  font-size: 8px;
}

.card-text {
  color: #344563;
  font-weight: 400;
  line-height: 24px;
  margin: 0;
}

.card .program {
  font-weight: 500;
  font-size: 13px;
  line-height: 16px;
  list-style: none;
  gap: 8px;
  padding: 0;
  display: flex;
}

.about-language .language {
  font-weight: 500;
  line-height: 20px;
  height: 60px;
  list-style: none;
  background-color: #f7f7f9;
  border-radius: 10px;
  margin: 7px 0 7px 0;
  color: #253858;
  display: flex;
  align-items: center;
  gap: 16px;
}

.card .program .language {
  padding: 4px 12px 4px 12px;
  border-radius: 8px;
  color: #6070ff;
  background-color: #ebebff;
}

.card .btn {
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  border: 1px solid #396df2;
  color: #396df2;
  border-radius: 8px;
  background-color: white;
  height: 50px;
  width: 110px;
  transition:
    background-color 200ms ease-in-out,
    border 200ms ease-in-out,
    color 200ms ease-in-out,
    box-shadow 200ms ease-in-out;
}

.about .btn {
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  width: 150px;
  height: 48px;
  border: 1px solid #396df2;
  color: #396df2;
  border-radius: 8px;
  background-color: white;
}

.contact_form-control .btn {
  margin-top: 22px;
  padding: 15px;
  font-family: inherit;
  font-weight: 500;
  font-size: 17px;
  color: #6070ff;
  letter-spacing: 0.03em;
  border: 0;
  border-radius: 8px;
  background-color: #fff;
  transition: opacity 200ms ease-in-out, box-shadow 200ms ease-in-out, color 200ms ease-in-out;
}

.card .btn:hover {
  color: #fff;
  border: 1px solid #6070ff;
  background-color: #6070ff;
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
}

.card .btn:active {
  background-color: #2230d2;
}

.about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 32px;
  border-top-right-radius: 60px;
  background-color: white;
  padding-top: 114px;
  padding-bottom: 114px;
}

.about .btn:hover {
  background-color: #dfeefa;
  transform: scale(1.1);
}

.about-language {
  padding: 60px 0 0 0;
  background-color: white;
  list-style: none;
}

.about-language .language img {
  height: 48px;
  width: 48px;
  margin-left: 24px;
}

.about-language .fa-solid:hover {
  color: #6070ff;
  font-size: 16px;
}

.about-language hr {
  width: calc(100% - 15px);
  margin-top: 12px;
  display: flex;
  justify-content: center;
}

.skills .about-language .main {
  width: 100%;
}

.skills .about-language .arrow::after {
  content: '>';
  float: right;
  margin-right: 40px;
}

.skills .about-language .arrow-down::after {
  content: '>';
  float: right;
  transform: rotate(90deg);
  margin-right: 40px;
}

.about-language ul {
  padding: 5px;
}

.contact {
  background-color: #fff;
}

.contact .container {
  padding-top: 103px;
  color: #fff;
  text-align: center;
  background-color: #6070ff;
  background-image: url('images/contact-form-shapes-mobile.svg');
  background-repeat: no-repeat;
  background-size: contain;
  background-position: right top;
  border-radius: 60px 0 0 0;
}

.contact-title {
  margin-top: 0;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
}

.contact-text {
  margin-bottom: 60px;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
}

.contact_form {
  text-align: left;
  padding-bottom: 45px;
  display: flex;
  flex-direction: column;
}

.contact_form-control label {
  display: block;
  opacity: 0;
  font-size: 12px;
}

.contact_form-control input,
.contact_form-control textarea {
  width: 100%;
  font-family: inherit;
  font-weight: inherit;
  font-size: 17px;
  padding: 10px;
  border: 0;
  border-radius: 8px;
}

.contact_form-control textarea {
  min-width: 100%;
  max-width: 100%;
  min-height: 170px;
  max-height: 170px;
}

.contact_form-control .btn:hover {
  opacity: 0.8;
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
}

.contact_form-control .btn:active {
  background-color: #2230d2;
  color: #fff;
}

@media (min-width: 768px) {
  /* Navigation and Headline Section */
  .container-padding-x {
    padding-left: 140px;
    padding-right: 140px;
  }

  .container {
    max-width: 1520px;
  }

  .nav {
    justify-content: space-around;
  }

  .nav .fa-solid {
    display: none;
  }

  .menu {
    text-align: right;
    flex: 1;
    opacity: 1;
  }

  .menu .link {
    padding-left: 32px;
    color: #344563;
  }

  .headline-container {
    background-image: url(images/Header-bg.png);
    padding-left: 220px;
    border-bottom-left-radius: 0;
  }

  .title {
    font-size: 48px;
    line-height: 60px;
  }

  .text {
    max-width: 920px;
    font-size: 20px;
    line-height: 28px;
  }

  /* Project Section */

  .project {
    margin-top: 0;
    margin-bottom: 0;
    padding-bottom: 142px;
  }

  .project .card {
    flex-direction: row;
    width: 100%;
    max-width: 1156px;
    border-radius: 24px;
    padding: 24px;
    margin: 142px 0 0 0;
  }

  .project .card-reverse {
    flex-direction: row-reverse;
  }

  .card img {
    max-width: 544px;
    height: 448px;
    overflow: hidden;
  }

  .card .title {
    font-size: 40px;
    line-height: 52px;
    color: #091e42;
  }

  .card .info {
    font-size: 18px;
    color: #6b778c;
    font-weight: 400;
  }

  .card .info .fa-solid {
    font-size: 10px;
  }

  .card-info-container {
    display: flex;
    flex-direction: column;
    padding: 20px 24px 24px 46px;
  }

  /* About Section */

  .about {
    border-top-right-radius: 0;
  }

  .social-container {
    display: grid;
    width: 100%;
    grid-template-columns: 1fr 1fr;
    gap: 49px;
  }

  .about-social-container {
    width: 100%;
  }

  .skills {
    max-width: 100%;
  }

  .program-language ul {
    display: flex;
    flex-direction: row;
    gap: 10px;
    height: 140px;
  }

  .about-language .language img {
    margin: 0;
  }

  .about-language .language {
    height: 110px;
    width: 122px;
    margin: 7px 0 7px 0;
    padding: 7px;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 16px;
  }

  /* Contact Section */

  .contact .container {
    background-image: url('images/contact_form_background_shapes.png');
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 114px;
  }

  .contact-text {
    max-width: 570px;
    margin-bottom: 12px;
    font-size: 20px;
  }

  .contact_form {
    padding-bottom: 0;
    align-items: center;
  }

  .contact_form-control input,
  .contact_form-control textarea {
    min-width: 447px;
  }

  .contact_form-control textarea {
    min-width: 447px;
  }
}

